--- a/app/views/admin/pages/new_public_datasets.html.erb
+++ b/app/views/admin/pages/new_public_datasets.html.erb
@@ -38,7 +38,7 @@
                 </div>
               </div>
               <div class="DatasetsList-itemMeta">
-                <div class="DatasetsList-itemTags DefaultTags">
+                <div class="DatasetsList-itemTags DefaultTags DefaultTags--one-line">
                   <% if vis[:tags].size > 0 %>
                     <% formatted_tags(vis[:tags]) do |tag| %><a class="DefaultTags-item js-tag-link" href="<%= CartoDB.url(self, 'public_datasets_tag', {tag: tag}, vis[:owner]) %>"><%= tag %></a><% end %>
                   <% end %>
