--- a/app/views/admin/pages/new_public_maps.html.erb
+++ b/app/views/admin/pages/new_public_maps.html.erb
@@ -36,7 +36,7 @@
                 </div>
 
                 <div class="MapCard-tags">
-                  <div class="DefaultTags MapCard-contentBodyRow">
+                  <div class="DefaultTags DefaultTags--one-line MapCard-contentBodyRow">
                     <% if vis[:tags].size > 0 %>
                       <% formatted_tags(vis[:tags]) do |tag| %>
                         <a class="DefaultTags-item js-tag-link" href="<%= CartoDB.url(self, 'public_tag', {tag: tag}, vis[:owner]) %>"><%= tag %></a>
