--- a/lib/assets/javascripts/cartodb/new_dashboard/views/remote_datasets_item.jst.ejs
+++ b/lib/assets/javascripts/cartodb/new_dashboard/views/remote_datasets_item.jst.ejs
@@ -32,7 +32,7 @@
     </ul>
     <div class="DatasetsList-itemMeta">
       <% if (tagsCount > 0) { %>
-        <div class="DefaultTags DatasetsList-itemTags">
+        <div class="DefaultTags DefaultTags--one-line DatasetsList-itemTags">
           <% for (var i = 0, l = Math.min(maxTagsToShow, tags.length); i < l; ++i) { %>
             <a class="DefaultTags-item js-tag-link" href="<%= routerModel.urlForCurrentState({ search: ':'+ tags[i], library: false, page: 1 }) %>"><%= tags[i] %></a><% if (i !== (l-1)) { %>,<% } %>
           <% } %>
