Inherit color in linear-gradient so that we don't need to specify it on hover and .is-selected.

--- a/app/assets/stylesheets/new_variables/mixins.css.scss
+++ b/app/assets/stylesheets/new_variables/mixins.css.scss
@@ -214,6 +214,6 @@
     right: 0;
     height: $sLineHeight-normal;
     width: 2 * $sLineHeight-normal;
-    @include background-horizontal(rgba(255,255,255,0), rgba(255,255,255,1));
+    @include background-horizontal(rgba(255,255,255,0), inherit);
   }
 }
