--- a/lib/assets/javascripts/cartodb/common/views/create/listing/navigation.jst.ejs
+++ b/lib/assets/javascripts/cartodb/common/views/create/listing/navigation.jst.ejs
@@ -48,12 +48,19 @@
             Data library
           </button>
         </li>
+        <% if (isInsideOrg && mapTemplatesEnabled) { %>
+          <li class="Filters-typeItem">
+            <button class="Filters-typeLink js-mapTemplates <%= listing === 'map_templates' ? 'is-selected' : '' %>">
+              Map templates
+            </button>
+          </li>
+        <% } %>
       </ul>
     </div>
     <div class="Filters-order">
       <ul>
         <li class="Filters-typeItem">
-          <button class="Button Button--invert Button--create js-create_empty <%= listing === 'scratch' ? 'is-selected' : '' %> <%= !canCreateDataset ? 'is-disabled' : '' %>">
+          <button class="Button Button--invert Button--create js-create_empty <%= !canCreateDataset ? 'is-disabled' : '' %>">
             <%- createFromScratchLabel %>
           </button>
         </li>
