Showing 'map templates' tab only when create dialog is in maps view

--- a/lib/assets/javascripts/cartodb/common/views/create/listing/navigation.jst.ejs
+++ b/lib/assets/javascripts/cartodb/common/views/create/listing/navigation.jst.ejs
@@ -48,7 +48,7 @@
             Data library
           </button>
         </li>
-        <% if (isInsideOrg && mapTemplatesEnabled) { %>
+        <% if (isInsideOrg && mapTemplatesEnabled && createModel.showDatasets()) { %>
           <li class="Filters-typeItem">
             <button class="Filters-typeLink js-mapTemplates <%= listing === 'map_templates' ? 'is-selected' : '' %>">
               Map templates
