--- a/lib/assets/javascripts/cartodb/common/views/create/listing/navigation.jst.ejs
+++ b/lib/assets/javascripts/cartodb/common/views/create/listing/navigation.jst.ejs
@@ -50,7 +50,7 @@
         </li>
         <% if (isInsideOrg && mapTemplatesEnabled && createModel.showDatasets()) { %>
           <li class="Filters-typeItem">
-            <button class="Filters-typeLink js-mapTemplates <%= listing === 'map_templates' ? 'is-selected' : '' %>">
+            <button class="Filters-typeLink js-mapTemplates <%= listing === 'templated_workflows' ? 'is-selected' : '' %>">
               Map templates
             </button>
           </li>
