Create header and footer views listening to workflow model changes.

--- a/lib/assets/javascripts/cartodb/common/views/create/create_templated_workflows_footer.jst.ejs
+++ b/lib/assets/javascripts/cartodb/common/views/create/create_templated_workflows_footer.jst.ejs
@@ -3,15 +3,19 @@
 
 <div class="CreateDialog-footerInner">
   <div class="CreateDialog-footerInfo">
-        
+    <% if (workflowStepNumber) { %>
+      <button class="Button Button--secondary CreateDialog-footerActionsButton js-previousWorkflowStep">
+        <span>previous step</span>
+      </button>
+    <% } %>
   </div>
   <div class="CreateDialog-footerActions">
-    <% if ((visTemplateSteps.length - 1) > visTemplateStep) { %>
-    <button class="Button Button--main CreateDialog-footerActionsButton js-createVisTemplate">
-      <span>next step</span>
-    </button>
+    <% if (!workflowIsFinalStep) { %>
+      <button class="Button Button--main CreateDialog-footerActionsButton js-nextWorkflowStep">
+        <span>next step</span>
+      </button>
     <% } else { %>
-      <button class="Button Button--positive CreateDialog-footerActionsButton js-createVisTemplate">
+      <button class="Button Button--positive CreateDialog-footerActionsButton js-nextWorkflowStep">
         <span>create map</span>
       </button>
     <% } %>
