--- a/lib/assets/javascripts/cartodb/common/views/create/create_templated_workflows_header.jst.ejs
+++ b/lib/assets/javascripts/cartodb/common/views/create/create_templated_workflows_header.jst.ejs
@@ -3,13 +3,13 @@
     <div class="Dialog-headerIcon Dialog-headerIcon--main">
       <i class="iconFont iconFont-Wizard"></i>
     </div>
-    <p class="Dialog-headerTitle"><%- visTemplateName %></p>
+    <p class="Dialog-headerTitle"><%- workflowName %></p>
     <p class="Dialog-headerText">Chosen</p>
   </li>
-  <% for (var i = 0, l = visTemplateSteps.length; i < l; i++) { %>
-    <li class="CreateDialog-headerStep <% if (i === visTemplateStep) { %>is-selected<% } %>">
-      <div class="Dialog-headerIcon <% if (i === visTemplateStep) { %>Dialog-headerIcon--main<% } %>"><%- i + 1 %></div>
-      <p class="Dialog-headerTitle"><%- visTemplateSteps[i] %></p>
+  <% for (var i = 0, l = workflowStepNames.length; i < l; i++) { %>
+    <li class="CreateDialog-headerStep <% if (i === workflowStepNumber) { %>is-selected<% } %>">
+      <div class="Dialog-headerIcon <% if (i === workflowStepNumber) { %>Dialog-headerIcon--main<% } %>"><%- i + 1 %></div>
+      <p class="Dialog-headerTitle"><%- workflowStepNames[i] %></p>
       <p class="Dialog-headerText">Step <%- i + 1 %></p>
     </li>
   <% } %>
