Making credits usage slider compatible with new workflow templates

--- a/lib/assets/javascripts/cartodb/common/dialogs/create/listing/templated_workflows/templated_workflows_form_field.jst.ejs
+++ b/lib/assets/javascripts/cartodb/common/dialogs/create/listing/templated_workflows/templated_workflows_form_field.jst.ejs
@@ -2,6 +2,6 @@
   <div class="Form-rowLabel">
     <label class="Form-label"><%= name %></label>
   </div>
-  <div class="Form-rowData Form-rowData--med js-field"></div>
+  <div class="Form-rowData Form-rowData--longer js-field"></div>
   <div class="Form-rowInfo"></div>
 </div>
